# batching_pomp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cmake/Modules/: FindFLANN.cmake
include/batching_pomp/: BatchingPOMP.hpp  GraphTypes.hpp  batching.hpp  cspacebelief.hpp  util.hpp
include/batching_pomp/batching/: BatchingManager.hpp  DummyBatching.hpp  EdgeBatching.hpp  HybridBatching.hpp  SingleBatching.hpp  VertexBatching.hpp
include/batching_pomp/belief_resampling/: BeliefInformedResampler.hpp  SGDBasedResampler.hpp
include/batching_pomp/cspacebelief/: BeliefPoint.hpp  KNNModel.hpp  Manager.hpp  Model.hpp
include/batching_pomp/util/: BisectPerm.hpp  RoadmapFromFile.hpp  Selector.hpp  rv_state_map_string_adaptor.hpp
scripts/: example_2d_image.cc  example_2d_resampling.cc  save_sequence_to_graph.py
src/: BatchingPOMP.cpp
